fixed capital in phrase

--- a/Custom Button/index.html
+++ b/Custom Button/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="slds-form-element">
                 <label class="slds-form-element__label" for="text-input-id-2">
-                    <abbr class="slds-required" title="required">* </abbr>button link</label>
+                    <abbr class="slds-required" title="required">* </abbr>Button link</label>
                 <div class="slds-form-element__control">
                     <input type="text" id="text-input-id-2" placeholder="Placeholder text…" required=""
                         class="slds-input" />
